--- a/.github/workflows/lookup-ips.yml
+++ b/.github/workflows/lookup-ips.yml
@@ -22,6 +22,10 @@ jobs:
       - name: 检出代码
         uses: actions/checkout@v4
 
+      # 新增步骤：安装 dnsutils (其中包含 dig 命令)
+      - name: 安装 dnsutils
+        run: sudo apt-get update && sudo apt-get install -y dnsutils
+
       # 第二步：执行查询脚本
       - name: 查询 IP 地址并生成结果文件
         run: |
