--- a/.github/workflows/lookup-ips.yml
+++ b/.github/workflows/lookup-ips.yml
@@ -3,7 +3,7 @@ name: 定期获取域名IP
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'  # 每天 UTC 0 点执行
+    - cron: '0 0 * * *'
 
 jobs:
   lookup-ips:
@@ -17,6 +17,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y dnsutils
 
       - name: 查询 IP 并生成 hosts 文件
+        shell: bash
         run: |
           INPUT_FILE="domains.txt"
           OUTPUT_FILE="hosts_results.txt"
@@ -36,14 +37,12 @@ jobs:
             while (( try < max_try )); do
               local ips
               ips=$(dig +short A "$domain" | sort -u)
-              if [[ -n "$ips" ]]; then
-                for ip in $ips; do
-                  if is_ipv4 "$ip"; then
-                    echo "$ip"
-                    return 0
-                  fi
-                done
-              fi
+              for ip in $ips; do
+                if is_ipv4 "$ip"; then
+                  echo "$ip"
+                  return 0
+                fi
+              done
               local cname
               cname=$(dig +short CNAME "$domain" | head -n1 | tr -d '\r' | xargs)
               if [[ -n "$cname" ]]; then
@@ -59,7 +58,7 @@ jobs:
 
           while IFS= read -r domain || [[ -n "$domain" ]]; do
             domain=$(echo "$domain" | tr -d '\r' | xargs)
-            # 跳过空行、注释行、或包含不合法字符的行（整行只允许 a-zA-Z0-9.-）
+            # 只允许整行是 a-zA-Z0-9.-
             if [[ -z "$domain" || "$domain" =~ ^# || ! "$domain" =~ ^[a-zA-Z0-9.-]+$ ]]; then
               continue
             fi
@@ -67,7 +66,7 @@ jobs:
             echo "查询中: $clean_domain"
 
             ip=$(resolve_ip "$clean_domain")
-            if [[ -n "$ip" ]]; then
+            if [[ -n "$ip" && $(is_ipv4 "$ip" && echo yes) == yes ]]; then
               echo "$ip $clean_domain" >> $OUTPUT_FILE
               echo "" >> $OUTPUT_FILE
             fi
