--- a/.github/workflows/lookup-ips.yml
+++ b/.github/workflows/lookup-ips.yml
@@ -8,10 +8,15 @@ on:
 jobs:
   lookup-ips:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
+
+      - name: 配置 Git
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "github-actions-bot@users.noreply.github.com"
 
       - name: 安装 dig 工具
         run: sudo apt-get update && sudo apt-get install -y dnsutils
@@ -19,6 +24,9 @@ jobs:
       - name: 查询 IP 并生成 hosts 文件
         shell: bash
         run: |
+          #!/usr/bin/env bash
+          set -e
+          
           INPUT_FILE="domains.txt"
           OUTPUT_FILE="hosts_results.txt"
 
@@ -58,7 +66,6 @@ jobs:
 
           while IFS= read -r domain || [[ -n "$domain" ]]; do
             domain=$(echo "$domain" | tr -d '\r' | xargs)
-            # 只允许整行是 a-zA-Z0-9.-
             if [[ -z "$domain" || "$domain" =~ ^# || ! "$domain" =~ ^[a-zA-Z0-9.-]+$ ]]; then
               continue
             fi
@@ -72,14 +79,12 @@ jobs:
             fi
           done < "$INPUT_FILE"
 
-      - name: 提交并推送结果
+      - name: 提交更新
         run: |
-          git config --global user.name 'GitHub Actions Bot'
-          git config --global user.email 'github-actions-bot@users.noreply.github.com'
           git add hosts_results.txt
-
           if ! git diff --cached --quiet; then
             git commit -m "自动更新域名IP地址列表"
             git push
           else
             echo "无变化，无需提交"
+          fi
