--- a/.github/workflows/lookup-ips.yml
+++ b/.github/workflows/lookup-ips.yml
@@ -1,20 +1,17 @@
 name: 定期获取域名IP
 
 on:
-  # 设置一个计划任务，例如每天 UTC 时间 02:00 运行
   schedule:
-    - cron: '0 2 * * *'
-  # 也可以在代码提交到 main 分支时运行
+    - cron: '5 0 * * *'  # 每天 00:05（UTC 时间）执行
+  workflow_dispatch:      # 支持手动运行
   push:
     branches: [ main ]
-  # 允许手动从 Actions 标签页运行
-  workflow_dispatch:
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # 添加写入权限
+      contents: write
 
     steps:
     - name: Checkout repository
@@ -29,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
+
     - name: Install Playwright browsers
       run: |
         playwright install
